crates/language-v2/tests/src/fail/p1_definitions/duplicate_variant_name/test.stderr
error: A variant referencing 'Baz1' already exists.
  --> src/fail/p1_definitions/duplicate_variant_name/test.rs:21:53
   |
21 | ...                   EnumVariant(reference = Baz1)
   |                                               ^^^^
